# getopt-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml  README.md  run-all-fuzzers.sh
fuzz/fuzz_targets/: fuzz_cstr.rs  fuzz_getopt.rs  fuzz_optstring.rs
src/: lib.rs
